[package]
name = "pyddd-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
inquire = "0.5.3"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
tinytemplate = "1.2.1"
